--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,11 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.button {
+  transition: .7s ease;
+}
+
+.button:hover {
+  transform: translateY(-3px);
+}
