--- a/src/components/Trio.css
+++ b/src/components/Trio.css
@@ -3,6 +3,14 @@
   margin-bottom: 50px;
 }
 
+/* .new-container {
+  width: 100%;
+  max-width: 1450px;
+  margin: 0 auto;
+  padding-left: 10px;
+  padding-right: 10px;
+} */
+
 .trio-flex {
   display: flex;
   flex-direction: column;
@@ -53,4 +61,11 @@
 
 .trio-info .title {
   margin-top: 30px;
+}
+
+@media only screen and (min-width: 1440px) {
+  .trio-flex {
+    flex-direction: row;
+    align-items: space-between;
+  }
 }
