--- a/src/components/Registration.css
+++ b/src/components/Registration.css
@@ -2,10 +2,10 @@
   height: 100vh;
   width: 100vw;
   position: relative;
+  background-image: linear-gradient(-20deg, #b721ff 0%, #21d4fd 100%);
 }
 
-.registration .angle {
-  background-image: linear-gradient(-20deg, #b721ff 0%, #21d4fd 100%);
-  /* background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%); */
-  /* background-image: linear-gradient(to right, #f9d423 0%, #ff4e50 100%); */
+.registration .box {
+  max-width: 500px;
+  margin: 0 auto;
 }
