--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
 }
 
 .button {
-  transition: .7s ease;
+  transition: 0.7s ease;
 }
 
 .button:hover {
@@ -26,4 +26,11 @@ body {
 
 .is-purple {
   color: #a448f6;
+}
+
+.is-full-width-button {
+  width: 100%;
+  max-width: 400px;
+  margin: 0 auto;
+  margin-top: 10px;
 }
