--- a/src/components/RegistrationForm.css
+++ b/src/components/RegistrationForm.css
@@ -1,11 +1,3 @@
-/* .registrationForm {
-  display: flex;
-  justify-content: center;
-} */
-
-/* .formHolder {
-  width: 100%;
-  max-width: 550px;
-  padding: 20px;
-  background-color: white;
-} */
+.is-inline {
+  display: inline;
+}
